src/_includes/home.css
/* -- theme -- */
.Home a {
  color: $colorHome1;
}

.Home .Box {
  background: repeating-linear-gradient(
    -45deg,
    $white 0px,
    $white 1px,
    $colorHome0 1px,
    $colorHome0 8px
  );

  border-color: $colorHome1;
}

.NavLink--home:hover {
  color: $colorHome0;
  background-color: $colorHome1;
}

.Home .NavLink--home {
  color: $colorHome0;
  background-color: $colorHome1;
  pointer-events: none;
}

/* -- .Mission -- */
.Mission {
  display: flex;
  flex-direction: column;
  gap: $spacing4;
}

@media (min-width: $desktop) {
  .Mission {
    flex-direction: row;
    flex-wrap: wrap;
  }
}

/* -- .Mission-chunk -- */
@media (min-width: $desktop) {
  .Mission-chunk > * {
    max-width: 350px;
  }
}

/* -- .Mission-title -- */
.Mission-chunk:nth-child(1) {
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (min-width: $desktop) {
  .Mission-chunk:nth-child(1) {
    justify-content: unset;
  }

  .Mission-title[class] {
    margin-bottom: 0;
  }
}

/* -- .Mission-* [indexed]  -- */
.Mission-title {
  transform: rotate(3deg);
}

.Mission-chunk:nth-child(2) > .Mission-line {
  transform: rotate(-2deg);
}

.Mission-chunk:nth-child(3) > .Mission-line {
  transform: rotate(3deg);
}

.Mission-chunk:nth-child(4) > .Mission-line {
  transform: rotate(-2deg);
}

.Mission-chunk:nth-child(5) > .Mission-line {
  transform: rotate(2deg);
}

/* -- .Mission-chunk [desktop] -- */
@media (min-width: $desktop) {
  .Mission-chunk:nth-child(1) {
    order: 2;
    margin-left: 200px;
  }

  .Mission-chunk:nth-child(2) {
    order: 1;
    flex-basis: 100%;
    margin-left: 80px;
  }

  .Mission-chunk:nth-child(3) {
    order: 3;
    flex: 1;
    margin-top: -40px;
    margin-left: 104px;
  }

  .Mission-chunk:nth-child(4) {
    order: 4;
    flex-basis: 100%;
    margin-left: 240px;
  }

  .Mission-chunk:nth-child(5) {
    order: 5;
    flex-basis: 100%;
    margin-left: 128px;
  }
}

/* -- .Board -- */
.Board-title {
  transform: rotate(-3deg);
}

@media (min-width: $desktop) {
  .Board-title {
    margin-left: 150px;
    transform: rotate(-3deg);
  }
}

.Board-members {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: $spacing5;
}

/* -- .BoardMember -- */
.BoardMember {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  cursor: zoom-in;
}

.BoardMember[open] {
  cursor: initial;
}

@media (min-width: $desktop) {
  .BoardMember {
    flex-direction: row;
    align-items: flex-start;
  }
}

/* -- .BoardMember-* -- */
.BoardMember-card {
  position: relative;
  display: flex;
  flex-direction: column;
  width: $sizeCard;
  transition: transform 350ms ease-out 100ms;
}

.BoardMember .BoardMember-card[class]:hover {
  transform: none;
}

.BoardMember-photo {
  display: block;
  width: $sizeCard;
  height: $sizeCard;
  object-fit: cover;
  border-radius: $borderRadius0;
}

.BoardMember-name {
  position: absolute;
  max-width: 180px;
}

.BoardMember-brief {
  width: $sizeCardContent;
}

.BoardMember-readMore {
  color: $colorHome1;
}

.BoardMember-summary::marker,
.BoardMember-summary::-webkit-details-marker {
  display: none;
  content: "";
}

/* -- .BoardMember (mitu) -- */
.BoardMember:nth-child(1) .BoardMember-card {
  transform: rotate(1deg);
}

@media (min-width: $desktop) {
  .BoardMember:nth-child(1) .BoardMember-card {
    margin-left: -30px;
    margin-top: -10px;
  }
}

.BoardMember:nth-child(1) .BoardMember-name {
  top: -10px;
  left: -50px;
  transform: rotate(-2deg);
}

.BoardMember:nth-child(1) .BoardMember-brief {
  margin-left: -20px;
  margin-top: -25px;
  transform: rotate(-3deg);
}

/* -- .BoardMember (zan) -- */
.BoardMember:nth-child(2) .BoardMember-card {
  transform: rotate(-1deg);
}

@media (min-width: $desktop) {
  .BoardMember:nth-child(2) .BoardMember-card {
    margin-left: 10px;
    margin-top: 25px;
  }
}

.BoardMember:nth-child(2) .BoardMember-name {
  top: -30px;
  right: 15px;
  transform: rotate(-18deg);
}

.BoardMember:nth-child(2) .BoardMember-brief {
  align-self: flex-end;
  margin-right: 10px;
  margin-top: -20px;
  transform: rotate(2deg);
}

/* -- .BoardMember (clay) -- */
.BoardMember:nth-child(3) .BoardMember-card {
  transform: rotate(-2deg);
}

@media (min-width: $desktop) {
  .BoardMember:nth-child(3) .BoardMember-card {
    margin-left: -20px;
    margin-right: 35px;
    margin-top: 15px;
  }
}

.BoardMember:nth-child(3) .BoardMember-name {
  align-self: center;
  margin-left: -10px;
  margin-top: -30px;
  transform: rotate(-1deg);
}

.BoardMember:nth-child(3) .BoardMember-brief {
  align-self: flex-end;
  margin-right: 10px;
  margin-top: -20px;
  transform: rotate(-2deg);
}

/* -- .BoardMember (mark) -- */
.BoardMember:nth-child(4) .BoardMember-card {
  transform: rotate(4deg);
}

@media (min-width: $desktop) {
  .BoardMember:nth-child(4) .BoardMember-card {
    margin-left: 5px;
    margin-top: -15px;
  }
}

.BoardMember:nth-child(4) .BoardMember-name {
  margin-left: -20px;
  margin-top: 60px;
  transform: rotate(1deg);
}

.BoardMember:nth-child(4) .BoardMember-brief {
  align-self: flex-end;
  margin-right: -20px;
  margin-top: -30px;
  transform: rotate(-0.5deg);
}

/* -- .BoardMember (steph) -- */
.BoardMember:nth-child(5) .BoardMember-card {
  transform: rotate(2deg);
}

@media (min-width: $desktop) {
  .BoardMember:nth-child(5) .BoardMember-card {
    margin-left: 15px;
  }
}

.BoardMember:nth-child(5) .BoardMember-name {
  margin-left: -55px;
  margin-top: 55px;
  transform: rotate(-45deg);
}

.BoardMember:nth-child(5) .BoardMember-brief {
  align-self: flex-end;
  margin-right: -50px;
  margin-top: -50px;
  transform: rotate(-15deg);
}

/* -- .BoardMember-modal -- */
.BoardMember-overlay {
  opacity: 0;
  transition: opacity 0.3s;
}

.BoardMember[open] .BoardMember-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: repeating-linear-gradient(
    45deg,
    $gray0 0px,
    $gray0 1px,
    $white 1px,
    $white 8px
  );

  color: transparent;
  opacity: 0.8;
  z-index: 2;
  cursor: zoom-out;
}

.BoardMember-modal {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 3;
  pointer-events: none;
}

.BoardMember-body {
  max-width: 500px;
  padding: $spacing2;
  border-radius: 10px;
  pointer-events: all;
  opacity: 0;
  transition: opacity 0.3s;
}

.BoardMember[open] .BoardMember-body {
  opacity: 1;
}

.BoardMember-body > * + * {
  margin-top: $spacing1;
}

